istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basicservice
spec:
  hosts:
  - "config.local"
  gateways:
  - basic-gateway
  http:
  - match:
    - uri:
        prefix: / 
    route:
    - destination:
        port:
          number: 8080
        host: basic
